<resources>
    <string name="app_name">BRCM EduCorn</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_m">I\'m</string>
    <string name="email_or_userid">email or userid</string>
    <string name="password">password</string>
    <string name="current_time">Current Time</string>
    <string name="batch_year">Member Batch Year</string>
    <string name="student_registration_no">Student Registration No</string>
    <string name="member_email">Member Email</string>
    <string name="member_mobile_number">Member Mobile Number</string>
    <string name="name_of_member">Name Of Member</string>
    <string name="enter_postal_code">Enter postal code</string>
    <string name="enter_state">Enter state</string>
    <string name="enter_city">Enter city</string>
    <string name="brcm">BRCM</string>
    <string name="roll_no_hint">Enter Roll no. (20-CSE-3447)</string>
    <string name="register">Not a member yet ? Register</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="enter_your_email_here">email </string>
    <string name="select_an_attachment">Select An Attachment</string>
    <string name="brcm_college_of_engineering_amp_technology"><![CDATA[BRCM College of Engineering & Technology]]></string>
    <string name="loading">loading ..</string>
</resources>