<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.LoginMainActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:isScrollContainer="true"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageView
                android:id="@+id/imgLogoBig"
                android:layout_width="300dp"
                android:layout_height="245dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/brcm_logo_big" />

            <LinearLayout
                android:id="@+id/llBtnRoles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgLogoBig"
                android:layout_marginHorizontal="5dp"
                android:background="@color/white"
                android:elevation="1dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:weightSum="5"

                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_extrabold"

                    android:gravity="center_vertical|center_horizontal"
                    android:text="I'm"
                    android:textColor="@color/fontPrimary"
                    android:textSize="18sp"

                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/primary_bg"
                    android:elevation="4dp"
                    android:paddingStart="11dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="11dp"
                    android:paddingBottom="5dp"
                    android:weightSum="3">

                    <Button
                        android:id="@+id/studentBtn"
                        android:layout_width="0dp"
                        android:layout_height="34dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:elevation="0dp"
                        android:fontFamily="@font/no_to_sans_bold"
                        android:text="Student"
                        android:textAllCaps="false"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/facultyBtn"
                        android:layout_width="0dp"
                        android:layout_height="34dp"
                        android:layout_marginHorizontal="3dp"
                        android:layout_weight="1"
                        android:background="@color/appPrimary"
                        android:elevation="0dp"
                        android:fontFamily="@font/no_to_sans_bold"
                        android:text="Faculty"
                        android:textAllCaps="false"
                        android:textColor="#ffffff" />

                    <Button
                        android:id="@+id/adminBtn"
                        android:layout_width="0dp"
                        android:layout_height="34dp"
                        android:layout_weight="1"
                        android:background="@color/appPrimary"
                        android:elevation="0dp"
                        android:fontFamily="@font/no_to_sans_bold"
                        android:text="Admin"
                        android:textAllCaps="false"
                        android:textColor="#ffffff" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txtTitleLoginRole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/llBtnRoles"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_extrabold"
                android:text="Student Login"
                android:textColor="@color/fontPrimary"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtTitleLoginRole"
                android:layout_centerHorizontal="true"
                android:contextClickable="true"
                android:fontFamily="@font/no_to_sans_bold"
                android:shadowColor="@color/header_bg"
                android:shadowRadius="0.2"
                android:text="@string/register"
                android:textColor="@color/keep_playstoreicon_background"
                android:textSize="15sp"

                />

            <RelativeLayout
                android:id="@+id/rlLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtRegister"
                android:layout_marginHorizontal="5dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/white"
                android:elevation="2dp"
                android:paddingBottom="20dp">

                <LinearLayout
                    android:id="@+id/llInputUseridOrEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:layout_marginTop="20dp"
                    android:weightSum="5">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:src="@drawable/baseline_mail_24"
                        app:tint="@color/appPrimary" />

                    <EditText
                        android:id="@+id/edtUseridOrEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="4"
                        android:fontFamily="@font/no_to_sans_bold"
                        android:gravity="start"
                        android:hint="@string/enter_your_email_here"
                        android:inputType="textEmailAddress"
                        android:maxLength="35"
                        android:maxLines="1"
                        android:paddingHorizontal="16dp"
                        android:textColorHint="@color/appPrimary"
                        android:textSize="16sp"
                        android:autofillHints="" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/llInputUseridOrEmail"
                    android:weightSum="5">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:src="@drawable/baseline_lock_24"
                        app:tint="@color/appPrimary"

                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="4"
                        android:textColorHint="@color/appPrimary"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/appPrimary"

                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:paddingHorizontal="16dp"
                            />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/llLoginBtnAndForgotPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlLogin"
                android:layout_alignParentBottom="true">

                <TextView
                    android:id="@+id/txtForgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/no_to_sans_bold"
                    android:text="@string/forgot_password"
                    android:textColor="@color/appPrimary" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtForgot"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="@color/appPrimary"
                    android:elevation="4dp"
                    android:fontFamily="@font/no_to_sans_bold"
                    android:paddingVertical="10dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scroll"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="Version 1.0 All Rights Reserved"
        android:textColor="@color/fontPrimary"
        android:textSize="13sp" />

</RelativeLayout>
